--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,47 @@ img{max-width:100%;}
     border-left:1px solid #edf1f2;
 }
 .job-col-padding{padding:14px 15px;}
+/* entire container, keeps perspective */
+.flip-container {
+    perspective: 1000;
+    margin-top:32px;
+    margin-right:19px;
+    border:1px solid #eeeded;
+    background-color:#fff;
+    color:#999;
+}
+/* flip the pane when hovered */
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+    transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back {
+}
+
+/* flip speed goes here */
+.flipper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+    z-index: 2;
+}
+
+/* back, initially hidden pane */
+.back {
+    transform: rotateY(180deg);
+}
 @media screen and (max-width: 767px) {
     .icon a{margin-right:0;}
     .width767-hidden{display: none;}
